scripts/argocd-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  hostnames:
    - "argocd.maunghtoo.cloud"
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: alb-gateway
      namespace: default
      sectionName: https
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: alb-gateway
      namespace: default
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: argocd-server
          port: 80
          weight: 1
